# Emenu

./: .gitignore  pyproject.toml
emenu/: settings.py  urls.py
menu/: admin.py  models.py  serializers.py  views.py
menu/migrations/: 0001_initial.py  0002_rename_topping_food_toppings_food_is_publish_and_more.py  0003_alter_food_price.py  0004_alter_food_price.py
